--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=app
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PSW}
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.show-sql=true
+
+# Server Port
+server.port=8080
